# ComfyUI_PaintingCoderUtils

./: .gitignore  READEME_cn.md  README.md  README_CN.md  __init__.py  click_popup.py  color_picker.py  dynamic_image_input.py  image_resolution_adjuster.py  image_scale_calculator.py  install.py  mask_preview.py  multiline_text_input.py  pyproject.toml  remove_empty_lines_advance.py  requirements.txt  text_combiner.py
.github/workflows/: publish.yml
docs/: index.html
docs/fix/: workflow_fixer.html
docs/fix/css/: styles.css
docs/fix/js/: main.js
modules/images/: dynamic_image_input.py  dynamic_mask_input.py  image_base64_converter.py  image_latent_creator.py  image_resolution_adjuster.py  image_resolution_creator.py  image_resolution_creator_plus.py  mask_preview.py
modules/switch/: __init__.py  switch_node.py
modules/text/: i18n.py  multiline_text_input.py  remove_empty_lines.py  show_text_plus.py  simple_text_input.py  text_combiner.py
modules/text/translations/: en_US.json  zh_CN.json
modules/utils/: output_converter.py
modules/web/: web_image_loader.py
web/js/: __init__.py  click_popup.js  dynamic_image_input.js  dynamic_mask_input.js  image_latent_creator.js  image_resolution_creator_plus.js  image_size_base.js  image_size_creator.js  mask_preview.js  show_text_plus.js  text_combiner.js
workflow/: Flux_Image_Resolution_Adjuster_scale_up_batch_workflow.json
