[project]
name = "painting_coder_utils"
description = "Powerful tools for image and text processing, including cross-platform workflow fixes, optimized resolution, dynamic text/image combos, and batch processing.  Unlock seamless AI art creation and boost your productivity!"
version = "0.3.4"
license = {file = "LICENSE"}
dependencies = ["numpy>=1.21.0", "Pillow>=9.0.0", "torch>=1.7.0", "gradio>=4.0.0"]

[project.urls]
Repository = "https://github.com/jammyfu/ComfyUI_PaintingCoderUtils"
#  Used by Comfy Registry https://comfyregistry.org

[tool]
[tool.comfy]
PublisherId = "jammyfu"
DisplayName = "ComfyUI_PaintingCoderUtils"
Icon = "https://jammyfu.github.io/ComfyUI_PaintingCoderUtils/images/paiting_coder_icon_400.jpg"
